--- a/Dockerfile.CUDA12.2
+++ b/Dockerfile.CUDA12.2
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:12.6.0-runtime-ubuntu22.04
+FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
 
 RUN apt-get update
 RUN apt-get install -y python3 python3-pip git
@@ -6,7 +6,7 @@ RUN apt-get install -y python3 python3-pip git
 RUN pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu126
 
 
-WORKDIR InconvenientWeightsUpdate
 RUN git clone https://github.com/sugoma11/InconvenientWeightsUpdate
+# WORKDIR InconvenientWeightsUpdate
 
-CMD ['python3', 'main_triu.py']
+CMD ["python3", "main_triu.py"]
