--- a/Dockerfile.CUDA12.2
+++ b/Dockerfile.CUDA12.2
@@ -9,7 +9,6 @@ RUN pip3 install matplotlib==3.9.2
 RUN pip3 install pandas==2.2.3
 RUN pip3 install tqdm==4.66.5
 
-
 RUN git clone https://github.com/sugoma11/InconvenientWeightsUpdate.git
 WORKDIR InconvenientWeightsUpdate
 
@@ -17,6 +16,7 @@ RUN mkdir arch
 RUN wget https://media.githubusercontent.com/media/fpleoni/fashion_mnist/refs/heads/master/fashion-mnist_test.csv -O arch/fashion-mnist_test.csv
 RUN wget https://media.githubusercontent.com/media/fpleoni/fashion_mnist/refs/heads/master/fashion-mnist_train.csv -O arch/fashion-mnist_train.csv
 
-RUN mkdir results
+RUN mkdir results_trui
+RUN mkdir results_squash
 
 CMD ["python3", "main_triu.py"]
