--- a/Dockerfile.CUDA12.2
+++ b/Dockerfile.CUDA12.2
@@ -11,6 +11,7 @@ RUN pip3 install tqdm==4.66.5
 
 RUN git clone https://github.com/sugoma11/InconvenientWeightsUpdate.git
 WORKDIR InconvenientWeightsUpdate
+RUN git pull origin master
 
 RUN mkdir arch
 RUN wget https://media.githubusercontent.com/media/fpleoni/fashion_mnist/refs/heads/master/fashion-mnist_test.csv -O arch/fashion-mnist_test.csv
